--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["LEGEND2310 <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^1.0.1"
+python-dotenv = "^0.17.1"
+replit = "^3.1.0"
+flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
